Add launch config for backend debugging with absolute path

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,11 +7,12 @@
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
+            "name": "Backend Debugger",
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            "program": "${workspaceFolder}\\backend\\index.js"
+            "program": "${workspaceFolder}\\backend\\index.js",
+            "cwd": "${workspaceFolder}\\backend"
         }
     ]
 }
