--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,8 +2,8 @@ FROM node:14.8.0-alpine3.12
 
 COPY package*.json ./
 
-RUN npm install --silent
+RUN yarn
 
 COPY . .
 
-CMD ["npm", "start"]
+CMD ["yarn", "start"]
