--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "build:css": "postcss styles/tailwind.css -o styles/app.css",
     "watch:css": "postcss styles/tailwind.css -o styles/app.css -w"
   },
@@ -20,7 +21,18 @@
     "react-dom": "16.13.1"
   },
   "devDependencies": {
+    "eslint": "^7.7.0",
+    "eslint-config-airbnb": "18.2.0",
+    "eslint-config-node": "^4.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "2.21.2",
+    "eslint-plugin-jsx-a11y": "6.3.0",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-react": "7.20.0",
+    "eslint-plugin-react-hooks": "4.0.0",
     "postcss-preset-env": "^6.7.0",
+    "prettier": "^2.0.5",
     "tailwindcss": "^1.6.2"
   }
 }
