--- a/backend/package.json
+++ b/backend/package.json
@@ -12,12 +12,15 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "eslint": "^7.7.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-prettier": "^3.0.0",
+    "eslint-config-prettier": "^3.3.0",
     "nodemon": "^2.0.4"
   }
 }
