--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -13,7 +13,8 @@ spec:
     spec:
       containers:
       - name: dpkg-backend
-        image: arsenikki/dpkg-dep-tracker-backend:1.0.1
+        image: arsenikki/dpkg-dep-tracker-backend:1.0.3
+        imagePullPolicy: Always
         resources:
           limits:
             memory: "128Mi"
@@ -36,7 +37,8 @@ spec:
     spec:
       containers:
       - name: dpkg-frontend
-        image: arsenikki/dpkg-dep-tracker-frontend:1.0.4-prod
+        image: arsenikki/dpkg-dep-tracker-frontend:1.0.7
+        imagePullPolicy: Always
         resources:
           limits:
             memory: "128Mi"
@@ -60,6 +62,7 @@ spec:
       containers:
       - name: dpkg-static-test
         image: arsenikki/static-html-dpkg:latest
+        imagePullPolicy: Always
         resources:
           limits:
             memory: "128Mi"
