--- a/manifests/ingress.yaml
+++ b/manifests/ingress.yaml
@@ -1,44 +1,34 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: test-ingress
+  name: backend-ingress
   annotations:
-    kubernetes.io/ingress.class: traefik
-    cert-manager.io/cluster-issuer: letsencrypt
-    traefik.ingress.kubernetes.io/rewrite-target: /$2
+    kubernetes.io/ingress.class: nginx
 spec:
-  tls:
-    - hosts:
-        - untappiappi.westeurope.cloudapp.azure.com
-      secretName: tls-secret
   rules:
-    - http:
-        paths:
-        - path: /dpkg/api/
-          backend:
-            serviceName: dpkg-backend-clusterip
-            servicePort: 5000    
+  - host: dpkgviewer.westeurope.cloudapp.azure.com
+    http:
+      paths:
+      - path: /api/upload
+        backend:
+          serviceName: dpkg-backend-clusterip
+          servicePort: 80
 ---
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: front-test-ingress
+  name: frontend-ingress
   annotations:
-    kubernetes.io/ingress.class: traefik
-    cert-manager.io/cluster-issuer: letsencrypt
-    traefik.ingress.kubernetes.io/rewrite-target: /$2
+    kubernetes.io/ingress.class: nginx
 spec:
-  tls:
-    - hosts:
-        - untappiappi.westeurope.cloudapp.azure.com
-      secretName: tls-secret
   rules:
-    - http:
-        paths:
-          - path: /dpkg/
-            backend:
-              serviceName: dpkg-frontend-clusterip
-              servicePort: 3000
+  - host: dpkgviewer.westeurope.cloudapp.azure.com
+    http:
+      paths:
+      - path: /
+        backend:
+          serviceName: dpkg-frontend-clusterip
+          servicePort: 80
 
 
             
