--- a/manifests/service.yaml
+++ b/manifests/service.yaml
@@ -7,7 +7,8 @@ spec:
   selector:
     app: dpkg-backend
   ports:
-  - port: 5000
+  - port: 80
+    targetPort: 5000
 ---
 apiVersion: v1
 kind: Service
@@ -18,15 +19,17 @@ spec:
   selector:
     app: dpkg-frontend
   ports:
-  - port: 3000
+  - port: 80
+    targetPort: 3000
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: dpkg-static-test-lb
+  name: dpkg-frontend-lb
 spec:
   type: LoadBalancer
   selector:
-    app: dpkg-static-test
+    app: dpkg-frontend
   ports:
   - port: 80
+    targetPort: 3000
