--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,15 @@
 version: '3.7'
 services:
   backend:
-    image: arsenikki/dpkg-dep-tracker-backend:1.0.3
+    container_name: dpkg-viewer-backend
+    image: arsenikki/dpkg-viewer-backend:1.0.5
     ports: 
       - 5000:5000
-    container_name: dpkg-dep-tracker-backend
     restart: always
       
   frontend:
-    image: arsenikki/dpkg-dep-tracker-frontend:1.0.5
+    container_name: dpkg-viewer-frontend
+    image: arsenikki/dpkg-viewer-frontend:1.0.8
     ports: 
       - 3000:3000
     restart: always
