--- a/manifests/ingress.yaml
+++ b/manifests/ingress.yaml
@@ -4,10 +4,14 @@ metadata:
   name: backend-ingress
   annotations:
     kubernetes.io/ingress.class: nginx
+    cert-manager.io/cluster-issuer: letsencrypt-nginx
 spec:
+  tls:
+  - hosts:
+    - dpkgviewer.westeurope.cloudapp.azure.com
+    secretName: tls-secret
   rules:
-  - host: dpkgviewer.westeurope.cloudapp.azure.com
-    http:
+  - http:
       paths:
       - path: /api/upload
         backend:
@@ -20,15 +24,16 @@ metadata:
   name: frontend-ingress
   annotations:
     kubernetes.io/ingress.class: nginx
+    cert-manager.io/cluster-issuer: letsencrypt-nginx
 spec:
+  tls:
+  - hosts:
+    - dpkgviewer.westeurope.cloudapp.azure.com
+    secretName: tls-secret
   rules:
-  - host: dpkgviewer.westeurope.cloudapp.azure.com
-    http:
+  - http:
       paths:
       - path: /
         backend:
           serviceName: dpkg-frontend-clusterip
           servicePort: 80
-
-
-            
