--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,14 @@ version: '3.7'
 services:
   backend:
     container_name: dpkg-viewer-backend
-    image: arsenikki/dpkg-viewer-backend:1.0.5
+    image: arsenikki/dpkg-viewer-backend:1.0.6
     ports: 
       - 5000:5000
     restart: always
       
   frontend:
     container_name: dpkg-viewer-frontend
-    image: arsenikki/dpkg-viewer-frontend:1.0.8
+    image: arsenikki/dpkg-viewer-frontend:1.1.0-local
     ports: 
       - 3000:3000
     restart: always
