--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,7 @@
     "debug": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "start": "next start",
-    "export": "next export",
-    "build:css": "postcss styles/tailwind.css -o styles/app.css",
-    "watch:css": "postcss styles/tailwind.css -o styles/app.css -w"
+    "export": "next export"
   },
   "dependencies": {
     "autoprefixer": "^9.8.6",
@@ -20,8 +18,7 @@
     "postcss": "^7.0.32",
     "postcss-cli": "^7.1.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "swr": "^0.3.1"
+    "react-dom": "16.13.1"
   },
   "devDependencies": {
     "eslint": "^7.7.0",
